<resources>
    <string name="app_name">Urbapp2</string>
    <string name="home">Home</string>
    <string name="virtual_reality">Virtual Reality</string>
    <string name="settings">Settings</string>
    <string name="connectedAs">Connected as : </string>
    <string name="dialogClickOnConnectedAs">To switch user, go to settings menu.</string>
    <string name="language">Language</string>
    <string name="dialog_language">Please chose default language</string>
    <string name="language_summary">Chose default language of the app</string>
    <string name="user">User</string>
    <string name="user_summary">Change user</string>
    <string name="user_dialog">Please type your username</string>


    <string name="open_project">Open existing project:</string>
    <string name="ar_validation">Activate </string>
    <string name="ar_instruction">Set up the image with two-touch gestures</string>
    <string name="ar_add_image">Add image</string>
    <string name="ar_rotate">Rotate</string>
    <string name="augmented_reality">Augmented reality</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel all</string>
    <string name="cancel_all_success">Deletion succeed</string>
    <string name="cancel_modif">Don\'t save changes</string>
    <string name="color">Color :</string>
    <string name="element_caracterisation">Characterize an area</string>
    <string name="element_definition_instruction">Define an area</string>
    <string name="empty_project_name">Please specify project name</string>
    <string name="erase">Erase all</string>
    <string name="group">Group</string>
    <string name="group_error">Please select at least two zones</string>
    <string name="group_success">Selection is now grouped</string>
    <string name="help">Help</string>
    <string name="instruct1">Click map to draw either a facade (linear) or a polygonal area.</string>
    <string name="instruct2">To draw zones on the picture, click the pencil on the left. Zones have to be closed areas. Click the pencil again when finished.</string>
    <string name="instruct3">To group or degroup zones, select them then click on group/degroup buttons.</string>
    <string name="instruct4">To characterize a zone, click it then click "Characterize. You can now fill the fields.</string>
    <string name="instruct5">The summary shows which zones are characterized and which are not.</string>
    <string name="materials">Material :</string>
    <string name="new_photo">New picture</string>
    <string name="new_photo_galery">Choose a picture from the camera roll</string>
    <string name="new_photo_camera">Take a picture</string>
    <string name="new_photo_instruction">New picture</string>
    <string name="no_back">Nothing to cancel</string>
    <string name="no_connexion">Please make sure you have an internet connection then relaunch the app</string>
    <string name="no_photo">There\'s no picture linked to this project yet</string>
    <string name="no_project">No project yet</string>
    <string name="nothing_to_cancel">Nothing to cancel</string>
    <string name="one_zone">Please select only one zone</string>
    <string name="open_photo">Open picture</string>
    <string name="photoName_taken">This picture name has already been taken. Update failed.</string>
    <string name="photo_adress">Adress</string>
    <string name="photo_descr">Description</string>
    <string name="photo_edition_instruction">Define zones on this picture</string>
    <string name="photo_localisation_instruction">Locate picture</string>
    <string name="photo_localisation_locked">You can\'t add more dots as the outline is defining a closed zone.  To change it, cancel or delete it.</string>
    <string name="photo_name">Name</string>
    <string name="project">Project</string>
    <string name="projectName_taken">This project name has already been taken. Update failed.</string>
    <string name="project_already_created">This project name has already been taken. Please choose another name.</string>
    <string name="project_creation_description">Description</string>
    <string name="project_creation_location">Location</string>
    <string name="project_creation_location_instruction">Locate project</string>
    <string name="project_creation_name">Title</string>
    <string name="project_details_description">Description :</string>
    <string name="project_details_instruction">Project details</string>
    <string name="project_details_name">Title :</string>
    <string name="project_creation_title">Project creation</string>
    <string name="project_not_available">Someone else is currently working on this project.</string>
    <string name="project_to_locate">Please locate project.</string>
    <string name="recap_txt">Characterized elements.</string>
    <string name="save">Save</string>
    <string name="save_instruction">Would you like to save changes ? (They\'ll be lost otherwise)</string>
    <string name="saved">Saved</string>
    <string name="type">Area type</string>
    <string name="ungroup">Degroup</string>
    <string name="validation">Confirm</string>
    <string name="zone_definition">Define a zone</string>
    <string name="ungroup_success">Selection is now degrouped</string>
    <string name="summarize">Summary</string>
    <string name="see_details">Show details</string>
    <string name="new_project">New project</string>

</resources>
