<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="500dp"
    android:layout_height="match_parent"
    android:background="@color/grisClair">

    <Button
        android:id="@+id/btn_close_pop"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_cancel"
        android:clickable="true"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center_vertical|center|center_horizontal"
        android:text="X"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:layout_gravity="right"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/save_instruction"
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/ardoise1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foregroundGravity="center_vertical|center|center_horizontal" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/grisClair"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_change"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:layout_weight=".50"
            android:background="@drawable/button_validation"
            android:clickable="true"
            android:text="@string/save"
            android:textSize="12dp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_cancel_change"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight=".50"
            android:background="@drawable/button_cancel"
            android:clickable="true"
            android:text="@string/cancel_modif"
            android:textSize="12dp"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>