<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grisClair"
    android:showDividers="none">


    <TextView
        android:id="@+id/txt_instruction_new_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/new_photo_instruction"
        android:textColor="@color/ardoise2"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainerForGallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btn_galery"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_gallery"
            android:clickable="true"
            android:text="" />

        <TextView
            android:id="@+id/textViewGalery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_photo_galery"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ardoise2" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainerForCamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_camera"
            android:clickable="true"
            android:text="" />

        <TextView
            android:id="@+id/textViewCamera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_photo_camera"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ardoise2" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainerForCloseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_cancel"
            android:clickable="true"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center_vertical|center|center_horizontal"
            android:text="@string/cancel"
            android:textSize="16dp"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>