<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/main_toolbar" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/layout1"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".40"
            android:background="@color/grisClair"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/layout2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/grisClair"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center|center_vertical"
                        android:text="@string/project_creation_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/ardoise1"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <!-- <View
                         android:layout_width="wrap_content"
                         android:layout_height="1px"
                         android:background="@color/grisFonce"
                         android:id="@+id/view"
                         android:layout_below="@+id/textView1"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_marginTop="30dp" />-->


                    <EditText
                        android:id="@+id/EditTextName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView1"
                        android:layout_marginTop="50dp"
                        android:hint="@string/project_creation_name"
                        android:inputType="textPersonName">

                    </EditText>

                    <EditText
                        android:id="@+id/EditTextDescr"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/EditTextName"
                        android:layout_marginTop="50dp"
                        android:hint="@string/project_creation_description"
                        android:inputType="textMultiLine"
                        android:lines="7">

                    </EditText>


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/linearLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/EditTextDescr"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/grisClair"
                        android:gravity="left"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <Button
                            android:id="@+id/buttonLocalisationProject"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="0dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="49dp"
                            android:background="@drawable/button_localisation" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="84dp"
                            android:layout_alignBottom="@+id/buttonLocalisation"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="30dp"
                            android:layout_toEndOf="@+id/buttonLocalisation"
                            android:layout_toRightOf="@+id/buttonLocalisation"
                            android:color="@color/vert2"
                            android:gravity="left|center_vertical"
                            android:text="@string/project_creation_location"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/ardoise1"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/ButtonValidProject"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/linearLayout"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/button_validation"
                        android:gravity="center_vertical|center"
                        android:text="@string/validation"
                        android:textColor="@android:color/white">

                    </Button>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".60" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
